--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,94 @@
+*{
+	box-sizing: border-box;
+}
 body{
-  background-color:powderblue;
-  width: 80%;
-  margin: auto;
+	background-color: powderblue;
 }
-.container {
-  position: relative;
-  height: auto;
-	margin: 0 auto;
-  display: block;
+.container,
+#squareFour {	
+	max-width: 650px;
 }
-#squareFour {
-  margin:auto;
-  margin-top:20px;
-  width: 550px;
-  height: auto;
-  padding-top: 75px;
+.container{
+	width: 100%;
+	margin: auto;
+	justify-content: center;
+	align-items: center;
+	/*border: 1px solid red;*/
 }
-#squareFour:after{
-  content: "";
-  display: block;
-  padding-bottom:15px;
+#squareFour,
+#squareThree,
+#squareTwo,
+#squareOne{
+	margin: auto;
 }
-#squareThree {  
-  margin: auto;
-  width: 450px;
-  height: auto;
-  padding-top: 75px;
+#squareFour:after,
+#squareThree:after,
+#squareTwo:after,
+#squareOne:after{
+	content: "";
+	display: block;
 }
+#squareFour:after,
 #squareThree:after{
-  content: "";
-  display: block;
-  padding-bottom:15px;
+	padding-bottom: 5%;
 }
-#squareTwo {  
-  margin: auto;
-  width: 350px;
-  height: auto;
-  padding-top: 75px;
+#squareThree,
+#squareTwo,
+#squareOne{
+	height: auto;
+}
+#squareFour{
+	position: relative;
+	width: 100%;
+	padding-top: 15%;	
+}
+#squareThree{
+	width: 80%;
+	padding-top: 15%;
+}
+#squareTwo{
+	width: 75%;
+	padding-top: 20%;
 }
 #squareTwo:after{
-  content: "";
-  display: block;
-  padding-bottom:15px;
+	padding-bottom: 8%;
 }
-#squareOne {  
-  margin: auto;
-  width: 250px;
-  height: 150px;
-  padding-top: 75px;
+#squareOne{	
+	width: 65%;
 }
 #squareOne:after{
-  content: "";
-  display: block;
-  padding-bottom:15px;
+	padding-bottom: 100%;
 }
-.button {
-  background-color: #00d14d;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 80px;
-  text-align: center;
+.button1{
+	background-color: #00d14d;
+	color: white;
+	padding: 1rem;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+	text-align: center;
   text-decoration: none;
-  transition-duration: 0.2s;
-  cursor: pointer;
-	margin: 0 auto;
-	display: block;
-  margin-top:40px;
+	-webkit-box-shadow: 0px 5px 4px -3px #047207; 
+	box-shadow: 0px 5px 4px -3px #047207;	
+	width: 50%;
+	min-width: 200px;
+  margin-left: 25%;
+	margin-top: 15px;
+	transition: 0.2s;
+}
+.button1:hover{
+	background-color: green;
+}
+.button1:active{
+	background-color: #00d14d;
 }
 
-.button:hover {
-  background-color: green;
-  color: white;
-}
-
-.button:active {
-  background-color: blue;
-  color: white;
+/*media break for larger screens*/
+@media (min-width: 768px) {	
+	#squareFour{	
+		width: 85%;		
+	}
+	.button1{
+		padding: .5rem;
+	}	
 }
